--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:prod": "ng build --configuration production --base-href https://github.com/k-cr/portfolio-YP",
+    "build:prod": "ng build --configuration production --base-href https://k-cr.github.io/portfolio-YP/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
     "test:headless": "ng test --watch=false --browsers=ChromeHeadless"
